# mailing_service

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing_service/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing_service/management/commands/: run_mailings.py  runapscheduler.py
mailing_service/migrations/: 0001_initial.py  0002_alter_maillogs_status.py  0003_mailing_mailing_name.py  0004_alter_client_email.py  0005_alter_mailing_mailing_name.py  0006_client_user_mailing_user_message_user.py  0007_alter_client_email.py  0008_alter_client_options_alter_mailing_options_and_more.py  0009_mailing_is_active.py  0010_alter_mailing_status.py  0011_alter_mailing_options.py
mailing_service/templates/mailing_service/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_logs.html  maillogs_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing_service/templates/mailing_service/includes/: inc_main_menu.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  register.html  reset_password.html  user_form.html  user_list.html
